# ICALA

./: .classpath  .gitignore  .project  NAOHostPort.txt  README
doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list
doc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-19.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
doc/input/: ConsoleReader.html  SenderUDP.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
doc/interactor/: ConsoleInteractor.html  InteractorUDP.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
doc/output/: ConsoleRequester.html  RequesterUDP.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
doc/soinnm/: Cluster.html  Edge.html  Node.html  SOINNM.html  SOINNMTest.html  XMLReader.html  XMLWriter.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
doc/tdam/: Association.html  InputHandler.html  (+15 more)
qiprojects/soundgeneration/: CMakeLists.txt  README  alsoundgeneration.cpp  alsoundgeneration.h  main.cpp  qiproject.xml
qiprojects/soundspectrum/: CMakeLists.txt  README  alsoundspectrum.cpp  alsoundspectrum.h  main.cpp  qiproject.xml
qiprojects/soundspectrum/.qi/: qibuild.xml
(+167 files in other folders)
